<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.calendarexemp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3.2"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="TODO"
            app:srcCompat="@android:drawable/ic_media_rew" />

        <TextView
            android:id="@+id/tvMonthTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/textview"
            android:textAlignment="center" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            app:srcCompat="@android:drawable/ic_media_ff" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llMonthName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3.2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvMondayTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvMondayTitle"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvTuesdayTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvTuesdayTitle"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvWednesdayTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvWednesdayTitle"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvThursdayTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvThursdayTitle"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvFridayTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvFridayTitle"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvSaturdayTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvSaturdayTitle"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvSundayTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvSundayTitle"
            android:textAlignment="center" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vpMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Button" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Button" />

    </LinearLayout>

</LinearLayout>
